A lot left to do